[package]
name = "sunat_ruc"
version = "0.1.2"
authors = ["Cesar Gutierrez <itsudatte01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
url = "2.2.0"

encoding_rs = "0.8.26"
encoding_rs_io = "0.1"